-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.3.0-beta1
-
None
-
rhel 7.3,qt 5.6
When I add new file to current project,"add to project" ComboBox don't have default value(current project) and cannot be selected;
- is duplicated by
-
QTCREATORBUG-18024 I can't add library by right click on project and select Add Library...Nothing happens
-
- Closed
-
-
QTCREATORBUG-17928 ProjectExplorer: Missing update of project tree
-
- Closed
-
-
QTCREATORBUG-17930 ProjectExplorer: Add files to qrc is broken
-
- Closed
-