ProjectExplorer: Fix listing of project nodes in the wizard's summary page

The wizards summary page did no longer list existing project nodes. Wire up that logic
so that projects and files can finally get added to existing qmake projects again.

Task-number: QTCREATORBUG-17994
Change-Id: Icc019bdf0f569440eaa01c55fc69b17e7f831b20
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: hjk <hjk@qt.io>